--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host --port 5000",
-    "build": "tsc && vite build",
+    "dev": "cross-env NODE_ENV=development vite --host --port 5000",
+    "build": "cross-env NODE_ENV=production tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -25,6 +25,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^2.0.1",
+    "cross-env": "^7.0.3",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
     "vite-plugin-vconsole": "^1.2.2"
