feat: prepare base url vite for gh

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "cross-env NODE_ENV=development vite --host --port 5000",
-    "build": "cross-env NODE_ENV=production tsc && vite build",
+    "build": "tsc && cross-env NODE_ENV=production vite build",
     "preview": "vite preview"
   },
   "dependencies": {
