fix: fix ts issues to prod build

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development vite --host --port 5000",
     "build": "tsc && cross-env NODE_ENV=production vite build",
+    "build:dev": "tsc && cross-env NODE_ENV=development vite build --mode development --sourcemap",
     "preview": "vite preview"
   },
   "dependencies": {
