--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
+    "react-zoom-pan-pinch": "^2.1.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
