--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@chakra-ui/react": "^2.3.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "draft-js": "^0.11.7",
     "framer-motion": "^7.2.1",
     "js-event-bus": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "react-zoom-pan-pinch": "^2.1.3",
+    "react-rte": "^0.16.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
