--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -1,7 +1,7 @@
 name: Release
 
 on:
-  push:
+  pull_request:
     branches: [main]
 
 jobs:
@@ -21,8 +21,3 @@ jobs:
           cache: 'npm'
       - run: npm install --force
       - run: npm run build
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.5
-        with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: ./dist # The folder the action should deploy.
