--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-rte": "^0.16.3",
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^2.0.1",
     "cross-env": "^7.0.3",
