--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "js-event-bus": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.3.0",
-    "react-rte": "^0.16.5",
+    "slate": "^0.82.1",
+    "slate-react": "^0.83.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
