--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-rte": "^0.16.3",
     "@types/uuid": "^8.3.4",
+    "@types/web": "^0.0.75",
     "@vitejs/plugin-react": "^2.0.1",
     "cross-env": "^7.0.3",
     "typescript": "^4.6.4",
