--- a/.github/workflows/pull-web.yml
+++ b/.github/workflows/pull-web.yml
@@ -19,5 +19,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: npm install --force --prefix web
-      - run: npm run build --prefix web
+      - run: npm install -w web
+      - run: npm run build -w web
