--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npm run dev --workspaces"
+    "dev": "lerna run dev"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/rondymesquita/master-canvas#readme",
   "workspaces": [
+    "api",
     "web"
-  ]
+  ],
+  "dependencies": {
+    "lerna": "^5.5.2"
+  }
 }
