--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "lerna run dev"
+    "dev": "lerna run dev",
+    "build": "lerna run build"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "web"
   ],
   "dependencies": {
-    "lerna": "^5.5.2"
+    "lerna": "^5.5.2",
+    "pm2": "^5.2.0"
   }
 }
