chore: add homepage on packahe.json

--- a/web/package.json
+++ b/web/package.json
@@ -48,6 +48,6 @@
   "bugs": {
     "url": "https://github.com/rondymesquita/master-canvas/issues"
   },
-  "homepage": "https://github.com/rondymesquita/master-canvas#readme",
+  "homepage": "https://github.com/rondymesquita/master-canvas",
   "description": ""
 }
