feat: started ui integration

--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.3.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "axios": "^0.27.2",
     "draft-js": "^0.11.7",
     "framer-motion": "^7.2.1",
     "js-event-bus": "^1.1.1",
