--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.3.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@tanstack/react-query": "^4.8.0",
     "axios": "^0.27.2",
     "draft-js": "^0.11.7",
     "framer-motion": "^7.2.1",
@@ -28,7 +29,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.17",
+    "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/react-rte": "^0.16.3",
     "@types/uuid": "^8.3.4",
