--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "strict": true,
     "module": "commonjs",
     "declaration": true,
     "removeComments": true,
@@ -16,8 +17,16 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "app/*": ["app/*"],
+      "config/*": ["config/*"],
+      "domain/*": ["domain/*"],
+      "infra/*": ["infra/*"],
+      "main/*": ["main/*"],
+      "presentation/*": ["presentation/*"],
+  }
   },
 
-  "exclude": ["node_modules", "**/dist/*"]
+  "exclude": ["node_modules", "**/dist/*"],
 }
