feat: save canvas id on save card

--- a/web/.vscode/settings.json
+++ b/web/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": "SimonSiefke.prettier-vscode"
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
