--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.2",
     "cookie-parser": "^1.4.6",
+    "express-session": "^1.17.3",
     "mongoose": "^6.6.2",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
@@ -41,6 +42,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.5",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
     "@types/passport-google-oauth20": "^2.0.11",
