--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -26,7 +26,8 @@
     "react-router-dom": "^6.3.0",
     "slate": "^0.82.1",
     "slate-react": "^0.83.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.21",
