--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -17,16 +17,8 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
-    "paths": {
-      "app/*": ["app/*"],
-      "config/*": ["config/*"],
-      "domain/*": ["domain/*"],
-      "infra/*": ["infra/*"],
-      "main/*": ["main/*"],
-      "presentation/*": ["presentation/*"],
-  }
+    "noFallthroughCasesInSwitch": false
   },
 
-  "exclude": ["node_modules", "**/dist/*"],
+  "exclude": ["node_modules", "**/dist/*"]
 }
