--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,5 @@ services:
     #   MONGO_INITDB_ROOT_PASSWORD: root
     ports:
       - 27017:27017
-    volumes:
-      - ./mongodb2:/data/db
+    # volumes:
+    #   - ./mongodb:/data/db
