--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.3.4",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@react-pdf/renderer": "^3.0.0",
     "@tanstack/react-query": "^4.8.0",
     "axios": "^0.27.2",
     "draft-js": "^0.11.7",
