--- a/.github/workflows/pull-web.yml
+++ b/.github/workflows/pull-web.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Pull Request
 
 on:
   pull_request:
@@ -8,16 +8,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [16.x]
+    env:
+      GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 16.x
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 16.x
           cache: 'npm'
       - run: npx lerna exec npm install
       - run: npx lerna run build
