--- a/.github/workflows/release-web.yml
+++ b/.github/workflows/release-web.yml
@@ -16,10 +16,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Use Node.js 16x
+      - name: Use Node.js 16.x
         uses: actions/setup-node@v2
         with:
-          node-version: 16x
+          node-version: 16.x
       - name: set user name
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
