--- a/.github/workflows/release-web.yml
+++ b/.github/workflows/release-web.yml
@@ -14,8 +14,8 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+        # with:
+        #   fetch-depth: 0
       - name: Use Node.js 16.x
         uses: actions/setup-node@v2
         with:
