--- a/.github/workflows/release-web.yml
+++ b/.github/workflows/release-web.yml
@@ -20,16 +20,16 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16.x
-      - name: set user name
+      - name: Set user name
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
       - run: npm ci
-      - run: npx lerna exec npm install
-      - run: npx lerna run build
+      - run: npm run configure
+      - run: npm run build
       - name: Release
         run: npx lerna version --conventional-commits --create-release github --yes
-      - name: Deploy 🚀
+      - name: Release webapp
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
           branch: gh-pages # The branch the action should deploy to.
