--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -80,7 +80,7 @@
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   },
-  "main": "main.ts",
+  "main": "dist/main.js",
   "directories": {
     "test": "test"
   },
