--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -18,7 +18,6 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
-  },
-
-  "exclude": ["node_modules", "**/dist/*"]
+  }
+  // "exclude": ["node_modules", "**/dist/*"]
 }
