--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "configure": "lerna exec npm install -- --legacy-peer-deps",
+    "configure": "lerna exec npm install",
     "dev": "lerna run dev",
     "build": "lerna run build"
   },
@@ -18,6 +18,9 @@
     "url": "https://github.com/rondymesquita/master-canvas/issues"
   },
   "homepage": "https://github.com/rondymesquita/master-canvas#readme",
+  "workspaces": [
+    "packages/*"
+  ],
   "private": true,
   "dependencies": {
     "lerna": "^5.5.2",
