--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -17,7 +17,8 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "resolveJsonModule": true
   },
   "include": ["src", "test"],
   "exclude": ["node_modules", "**/dist/*"]
