--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,14 @@ version: '3.9'
 services:
   mongo:
     image: mongo:6.0.1-focal
-    # restart: always
-    # environment:
-    #   MONGO_INITDB_ROOT_USERNAME: root
-    #   MONGO_INITDB_ROOT_PASSWORD: root
     ports:
       - 27017:27017
-    # volumes:
-    #   - ./mongodb:/data/db
+  api:
+    tty: true
+    stdin_open: true
+    env_file: ./.env
+    build:
+      context: ./packages/api
+      dockerfile: Dockerfile
+    ports:
+      - 5006:5006
