--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "configure": "lerna exec npm install",
-    "dev": "lerna run dev",
-    "build": "lerna run build",
+    "configure": "npx lerna exec npm install",
+    "dev": "npx lerna run dev",
+    "build": "npx lerna run build",
     "start": "npm run start:api && npm run start:web && npm run start:proxy",
     "stop": "pm2 stop all",
     "start:proxy": "npx pm2 start --name proxy start.js",
