--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,11 @@ services:
       dockerfile: Dockerfile
     ports:
       - 5005:5005
+  proxy:
+    tty: true
+    stdin_open: true
+    build:
+      context: ./packages/proxy
+      dockerfile: Dockerfile
+    ports:
+      - 5000:5000
