--- a/packages/web/Dockerfile
+++ b/packages/web/Dockerfile
@@ -3,7 +3,7 @@ FROM node:16-alpine3.15
 WORKDIR /home
 COPY . ./
 
-RUN npm install --legacy-peer-deps
+RUN npm install --legacy-peer-deps --timeout=9999999
 RUN npm run build
 
 EXPOSE 5005
