chore: downgrade docker node version from 16 to 14

--- a/packages/api/Dockerfile
+++ b/packages/api/Dockerfile
@@ -1,8 +1,9 @@
-FROM node:16-alpine3.15
+FROM node:14-alpine
 
 WORKDIR /home
 COPY . ./
 
+RUN npm i npm@latest -g
 RUN npm install --timeout=9999999
 RUN npm run build
 
