--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - 5006:5006
+    dns:
+      - 8.8.8.8
   web:
     tty: true
     stdin_open: true
