--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npx lerna run build",
     "start": "npm run start:api && npm run start:web && npm run start:proxy",
     "stop": "pm2 stop all",
-    "start:proxy": "npx pm2 start --name proxy start.js",
+    "start:proxy": "npx pm2 start --name proxy ./packages/proxy/start.js",
     "start:web": "npx pm2 serve --name web ./packages/web/dist/ 5005",
     "start:api": "npx pm2 start --name api ./packages/api/dist/src/main.js"
   },
