--- a/.github/workflows/release-web.yml
+++ b/.github/workflows/release-web.yml
@@ -27,6 +27,10 @@ jobs:
       - run: npm ci
       - run: npm run configure
       - run: npm run build
+      - name: Commit changes
+        run: |
+          git add -A
+          git commit -m "chore: push release changes"
       - name: Release
         run: npx lerna version --conventional-commits --create-release github --yes
       - name: Release webapp
