--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -30,6 +30,7 @@
     "@nestjs/swagger": "^6.1.2",
     "cookie-parser": "^1.4.6",
     "express-session": "^1.17.3",
+    "migrate-mongo": "^9.0.0",
     "mongoose": "^6.6.2",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
