--- a/packages/web/.prettierrc
+++ b/packages/web/.prettierrc
@@ -2,5 +2,7 @@
   "semi": true,
   "useTabs": false,
   "singleQuote": true,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "pluginSearchDirs": ["./node_modules"],
+  "plugins": ["prettier-plugin-organize-imports"]
 }
