--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -41,6 +41,7 @@
     "@types/web": "^0.0.75",
     "@vitejs/plugin-react": "^2.0.1",
     "cross-env": "^7.0.3",
+    "prettier-plugin-organize-imports": "^3.1.1",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
     "vite-plugin-vconsole": "^1.2.2"
