chore: display only card title on canvas

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "http-proxy": "^1.18.1",
     "lerna": "^5.5.2",
     "pm2": "^5.2.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "wait-on": "^6.0.1"
   }
 }
