--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.9",
-    "@chakra-ui/react": "^2.3.4",
+    "@chakra-ui/react": "^2.3.6",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@react-pdf/renderer": "^3.0.0",
@@ -28,6 +28,7 @@
     "react-icons": "^4.4.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.3.0",
+    "react-use": "^17.4.0",
     "slate": "^0.82.1",
     "slate-react": "^0.83.0",
     "uuid": "^8.3.2",
