--- a/.github/workflows/release-web.yml
+++ b/.github/workflows/release-web.yml
@@ -14,8 +14,8 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
-        # with:
-        #   fetch-depth: 0
+        with:
+          fetch-depth: 0
       - name: Use Node.js 16.x
         uses: actions/setup-node@v2
         with:
@@ -32,7 +32,7 @@ jobs:
           git add -A
           git commit -m "chore: push release changes"
       - name: Release
-        run: npx lerna version --conventional-commits --create-release github --yes
+        run: npx lerna version --conventional-commits --force-publish --create-release github --yes
       - name: Release webapp
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
