--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "npx lerna run build",
     "start": "npm run start:api && npm run start:web && npm run start:proxy",
     "stop": "pm2 stop all",
+    "reload": "pm2 reload all",
     "start:proxy": "pm2 start --name proxy ./packages/proxy/start.js",
     "start:web": "pm2 serve --name web ./packages/web/dist/ 5005",
     "start:api": "pm2 start --name api ./packages/api/dist/src/main.js"
