feat: implement pdf generation on backend but feature is disabled

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -28,12 +28,15 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.2",
+    "@react-pdf/renderer": "^3.0.0",
     "cookie-parser": "^1.4.6",
     "express-session": "^1.17.3",
     "migrate-mongo": "^9.0.0",
     "mongoose": "^6.6.2",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
