--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -18,7 +18,8 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "jsx": "react-jsx"
   },
   "include": ["src", "test"],
   "exclude": ["node_modules", "**/dist/*"]
